# catalogue-k8s-operator

./: .gitignore  SECURITY.md  justfile  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: promote.yaml  pull-request.yaml  quality-gates.yaml  release-edge.yaml  release-rock.yaml  release.yaml  tf-release.yaml  tiobe-scan.yaml  tiobe.yaml  update-libs.yaml
charm/: charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  tox.ini
charm/lib/charms/catalogue_k8s/v0/: catalogue.py
charm/lib/charms/catalogue_k8s/v1/: catalogue.py
charm/lib/charms/catalogue_k8s/v2/: catalogue.py
charm/src/: charm.py  nginx_config.py
charm/tests/integration/: conftest.py  helpers.py  test_charm.py  test_ingress.py  test_logging.py
charm/tests/unit/: conftest.py  test_charm.py  test_logging.py  test_override_hostname.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
workload/: goss.yaml  justfile  rockcraft.yaml  spread.yaml
workload/0.15.0/: nginx.conf  rockcraft.yaml
workload/0.15.0/ui/: index.html  package.json
workload/0.15.0/ui/src/: main.jsx
workload/0.15.0/ui/src/components/: LinkCategory.jsx
workload/ui/: index.html  modal.js  package-lock.json  ui.css  ui.js  vite.config.js
workload/ui/public/: config.json
workload/ui/src/components/: App.jsx  AppCard.jsx  AppMatrix.jsx  EndpointsModal.jsx  HeroStrip.jsx  LinksSection.jsx  Navigation.jsx
workload/ui/src/styles/: ui.css
